# Planet-Generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pch.h  vcpkg.json
Shaders/graphics/: AtmosphereShader.frag  ColorShader.vert  LightPassShader.frag  LightedShader.frag  PlanetShader.frag  PlanetShader.vert  SkyboxShader.frag  SkyboxShader.vert
Shaders/graphics/lighting/: pointShadowShader.frag  pointShadowShader.geom  pointShadowShader.vert  shadowShader.frag  shadowShader.vert
Shaders/graphics/post-processing/: BlendWeightShader.frag  PostProcessShader.vert  TAABlendShader.frag
Shaders/graphics/post-processing/SSAO/: ssaoBlur.frag  ssaoShader.frag
Shaders/include/: Color.glsl  LightTypes.glsl  PBRLight.glsl  ShaderOutputs.glsl  _LightFunctions.glsl
shader/graphics/: AtmosphereShader.frag  AtmosphereShader.vert  AtmosphereShaderOutside.frag  BasicShader.vert  ColorShader.frag  ColorShader.vert  LightPassShader.frag  LightedShader.frag  LightedShader.vert  PlanetShader.frag  PlanetShader.vert  PostProcessShader.frag  RenderVertex.vert  SkyboxShader.vert  TextureQuadShader.frag
shader/graphics/post-processing/: EdgeDetectionShader.frag  NeighborhoodBlendingShader.frag  PostProcessShader.frag  VelocityShader.frag  VelocityShader.vert
shader/include/: LightFunctions.glsl  LightTypes.glsl  Noise.glsl  ShaderOutputs.glsl
source/: main.cpp
source/Component/: BaseComponent.cpp  BaseComponent.h
source/Component/Engine/: CameraComponent.cpp  CameraComponent.h  PointLightSourceComponent.cpp  PointLightSourceComponent.h  TransformComponent.cpp  TransformComponent.h
source/Component/Engine/Physics/: BaseColliderComponent.cpp  BaseColliderComponent.h  BoxColliderComponent.cpp  BoxColliderComponent.h  CapsuleColliderComponent.cpp  CapsuleColliderComponent.h  ConvexHullColliderComponent.cpp  ConvexHullColliderComponent.h  MeshColliderComponent.cpp  MeshColliderComponent.h  SphereColliderComponent.cpp  SphereColliderComponent.h  StaticCompoundColliderComponent.cpp  StaticCompoundColliderComponent.h
source/Component/Engine/Renderer/: AtmosphereRenderComponent.cpp  AtmosphereRenderComponent.h  BaseMeshRenderComponent.cpp  BaseMeshRenderComponent.h  MeshRenderComponent.cpp  MeshRenderComponent.h  PlanetMeshRenderComponent.cpp  PlanetMeshRenderComponent.h
source/Component/Essential/: CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  PointLightSourceComponent.cpp  PointLightSourceComponent.h  RenderComponent.cpp  RenderComponent.h  TransformComponent.cpp  TransformComponent.h
source/Component/Essential/Mesh/: BaseMeshComponent.cpp  BaseMeshComponent.h  GLMeshComponent.cpp  GLMeshComponent.h  SimpleMeshComponent.cpp  SimpleMeshComponent.h
source/Component/Essential/Renderer/: AtmosphereRenderComponent.cpp  AtmosphereRenderComponent.h  BaseMeshRenderComponent.cpp  BaseMeshRenderComponent.h  ColorMeshRenderComponent.cpp  ColorMeshRenderComponent.h  MeshRenderComponent.cpp  MeshRenderComponent.h  PhongMeshRenderComponent.cpp  PhongMeshRenderComponent.h  PlanetMeshRenderComponent.cpp  PlanetMeshRenderComponent.h  SkyboxRenderComponent.cpp  SkyboxRenderComponent.h
source/Component/Game/Planet/: GravityForceComponent.cpp  GravityForceComponent.h  GravityGeneratorComponent.cpp  GravityGeneratorComponent.h  PlanetGenComponent.cpp  PlanetGenComponent.h
source/Component/Game/Player/: MovementComponent.cpp  MovementComponent.h
source/Component/Planet/: PlanetGenComponent.cpp  PlanetGenComponent.h
source/Component/Player/: MovementComponent.cpp  MovementComponent.h
source/Debug/: Logger.cpp  Logger.h
source/Engine/: Config.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Level.cpp  Level.h  LevelLoad.h  Lighting.cpp  Lighting.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h
source/GLWrapper/: BasicShaderProgram.cpp  BasicShaderProgram.h  Buffer.h  Buffer.inl  ColorMesh.cpp  ColorMesh.h  ComplexShaderProgram.cpp  ComplexShaderProgram.h  Cubemap.cpp  Cubemap.h  FrameBuffer.cpp  FrameBuffer.h  FrameBuffer.inl  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexArray.inl
source/Generator/: MeshGenerator.cpp  MeshGenerator.h  NoiseGenerator.cpp  NoiseGenerator.h
source/Math/: Color.cpp  Color.h  RGB.h  Random.cpp  Random.h
source/Object/: BaseObject.cpp  BaseObject.h  BaseObject.inl  GameObject.cpp  GameObject.h  Material.cpp  Material.h
source/Object/Material/: Material.cpp  Material.h  MaterialLibrary.cpp  MaterialLibrary.h
